--- a/src/style/loadingSpinner.scss
+++ b/src/style/loadingSpinner.scss
@@ -7,7 +7,7 @@
     width: 26px;
     height: 26px;
     margin: 0 7px;
-    background-color: #fff;
+    background-color: black;
 
     border-radius: 100%;
     display: inline-block;
